// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Проверка добавления клиента 1`] = `
<MobileCompany
  clients={
    Array [
      Object {
        "balance": 200,
        "id": 0,
        "name": "Вася",
        "patronymic": "Дмитриевич",
        "surname": "Пупкин",
      },
      Object {
        "balance": 200,
        "id": 1,
        "name": "Ваня",
        "patronymic": "Александрович",
        "surname": "Веселюшкин",
      },
      Object {
        "balance": -200,
        "id": 2,
        "name": "Петя",
        "patronymic": "Андреевич",
        "surname": "Грустняшкин",
      },
    ]
  }
>
  <div>
    <MobileCompanyFilters>
      <div>
        <button
          className="btn btn-secondary btn-space fbtn-all"
          data-mode={0}
          onClick={[Function]}
          type="button"
        >
          Все
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-active"
          data-mode={1}
          onClick={[Function]}
          type="button"
        >
          Активные
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-block"
          data-mode={2}
          onClick={[Function]}
          type="button"
        >
          Заблокированные
        </button>
      </div>
    </MobileCompanyFilters>
    <MobileCompanyClietns
      clients={
        Array [
          Object {
            "balance": 200,
            "id": 0,
            "name": "Вася",
            "patronymic": "Дмитриевич",
            "surname": "Пупкин",
          },
          Object {
            "balance": 200,
            "id": 1,
            "name": "Ваня",
            "patronymic": "Александрович",
            "surname": "Веселюшкин",
          },
          Object {
            "balance": -200,
            "id": 2,
            "name": "Петя",
            "patronymic": "Андреевич",
            "surname": "Грустняшкин",
          },
        ]
      }
    >
      <div>
        <table
          className="table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                Фамилия
              </th>
              <th
                scope="col"
              >
                Имя
              </th>
              <th
                scope="col"
              >
                Отчество
              </th>
              <th
                scope="col"
              >
                Баланс
              </th>
              <th
                scope="col"
              >
                Статус
              </th>
              <th
                scope="col"
              >
                Редактировать
              </th>
              <th
                scope="col"
              >
                Удалить
              </th>
            </tr>
          </thead>
          <tbody>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 0,
                  "name": "Вася",
                  "patronymic": "Дмитриевич",
                  "surname": "Пупкин",
                }
              }
              key="0"
            >
              <tr>
                <td>
                  Пупкин
                </td>
                <td>
                  Вася
                </td>
                <td>
                  Дмитриевич
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 1,
                  "name": "Ваня",
                  "patronymic": "Александрович",
                  "surname": "Веселюшкин",
                }
              }
              key="1"
            >
              <tr>
                <td>
                  Веселюшкин
                </td>
                <td>
                  Ваня
                </td>
                <td>
                  Александрович
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": -200,
                  "id": 2,
                  "name": "Петя",
                  "patronymic": "Андреевич",
                  "surname": "Грустняшкин",
                }
              }
              key="2"
            >
              <tr>
                <td>
                  Грустняшкин
                </td>
                <td>
                  Петя
                </td>
                <td>
                  Андреевич
                </td>
                <td>
                  -200
                </td>
                <td>
                  <span>
                    Заблокированный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
          </tbody>
        </table>
      </div>
    </MobileCompanyClietns>
    <button
      className="btn btn-secondary btn-add"
      onClick={[Function]}
      type="button"
    >
      Добавить Клиента
    </button>
  </div>
</MobileCompany>
`;

exports[`Проверка добавления клиента 2`] = `
<MobileCompany
  clients={
    Array [
      Object {
        "balance": 200,
        "id": 0,
        "name": "Вася",
        "patronymic": "Дмитриевич",
        "surname": "Пупкин",
      },
      Object {
        "balance": 200,
        "id": 1,
        "name": "Ваня",
        "patronymic": "Александрович",
        "surname": "Веселюшкин",
      },
      Object {
        "balance": -200,
        "id": 2,
        "name": "Петя",
        "patronymic": "Андреевич",
        "surname": "Грустняшкин",
      },
    ]
  }
>
  <div>
    <MobileCompanyFilters>
      <div>
        <button
          className="btn btn-secondary btn-space fbtn-all"
          data-mode={0}
          onClick={[Function]}
          type="button"
        >
          Все
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-active"
          data-mode={1}
          onClick={[Function]}
          type="button"
        >
          Активные
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-block"
          data-mode={2}
          onClick={[Function]}
          type="button"
        >
          Заблокированные
        </button>
      </div>
    </MobileCompanyFilters>
    <MobileCompanyClietns
      clients={
        Array [
          Object {
            "balance": 200,
            "id": 0,
            "name": "Вася",
            "patronymic": "Дмитриевич",
            "surname": "Пупкин",
          },
          Object {
            "balance": 200,
            "id": 1,
            "name": "Ваня",
            "patronymic": "Александрович",
            "surname": "Веселюшкин",
          },
          Object {
            "balance": -200,
            "id": 2,
            "name": "Петя",
            "patronymic": "Андреевич",
            "surname": "Грустняшкин",
          },
        ]
      }
    >
      <div>
        <table
          className="table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                Фамилия
              </th>
              <th
                scope="col"
              >
                Имя
              </th>
              <th
                scope="col"
              >
                Отчество
              </th>
              <th
                scope="col"
              >
                Баланс
              </th>
              <th
                scope="col"
              >
                Статус
              </th>
              <th
                scope="col"
              >
                Редактировать
              </th>
              <th
                scope="col"
              >
                Удалить
              </th>
            </tr>
          </thead>
          <tbody>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 0,
                  "name": "Вася",
                  "patronymic": "Дмитриевич",
                  "surname": "Пупкин",
                }
              }
              key="0"
            >
              <tr>
                <td>
                  Пупкин
                </td>
                <td>
                  Вася
                </td>
                <td>
                  Дмитриевич
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 1,
                  "name": "Ваня",
                  "patronymic": "Александрович",
                  "surname": "Веселюшкин",
                }
              }
              key="1"
            >
              <tr>
                <td>
                  Веселюшкин
                </td>
                <td>
                  Ваня
                </td>
                <td>
                  Александрович
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": -200,
                  "id": 2,
                  "name": "Петя",
                  "patronymic": "Андреевич",
                  "surname": "Грустняшкин",
                }
              }
              key="2"
            >
              <tr>
                <td>
                  Грустняшкин
                </td>
                <td>
                  Петя
                </td>
                <td>
                  Андреевич
                </td>
                <td>
                  -200
                </td>
                <td>
                  <span>
                    Заблокированный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
          </tbody>
        </table>
      </div>
    </MobileCompanyClietns>
    <MobileCompanyAddClient>
      <form>
        <div
          className="mb-3"
        >
          <label
            className="form-label"
          >
            Фамилия
          </label>
          <input
            className="form-control surname"
            id="surname"
            type="text"
          />
        </div>
        <div
          className="mb-3"
        >
          <label
            className="form-label"
          >
            Имя
          </label>
          <input
            className="form-control name"
            id="name"
            type="text"
          />
        </div>
        <div
          className="mb-3"
        >
          <label
            className="form-label"
          >
            Отчество
          </label>
          <input
            className="form-control patronymic"
            id="patronymic"
            type="text"
          />
        </div>
        <div
          className="mb-3"
        >
          <label
            className="form-label"
          >
            Баланс
          </label>
          <input
            className="form-control balance"
            id="balance"
            type="number"
          />
        </div>
        <button
          className="btn btn-primary btn-save"
          onClick={[Function]}
          style={
            Object {
              "marginRight": "10px",
            }
          }
          type="submit"
        >
          Сохранить
        </button>
        <button
          className="btn btn-primary "
          onClick={[Function]}
        >
          Отменить
        </button>
      </form>
    </MobileCompanyAddClient>
  </div>
</MobileCompany>
`;

exports[`Проверка добавления клиента 3`] = `
<MobileCompany
  clients={
    Array [
      Object {
        "balance": 200,
        "id": 0,
        "name": "Вася",
        "patronymic": "Дмитриевич",
        "surname": "Пупкин",
      },
      Object {
        "balance": 200,
        "id": 1,
        "name": "Ваня",
        "patronymic": "Александрович",
        "surname": "Веселюшкин",
      },
      Object {
        "balance": -200,
        "id": 2,
        "name": "Петя",
        "patronymic": "Андреевич",
        "surname": "Грустняшкин",
      },
    ]
  }
>
  <div>
    <MobileCompanyFilters>
      <div>
        <button
          className="btn btn-secondary btn-space fbtn-all"
          data-mode={0}
          onClick={[Function]}
          type="button"
        >
          Все
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-active"
          data-mode={1}
          onClick={[Function]}
          type="button"
        >
          Активные
        </button>
        <button
          className="btn btn-secondary btn-space fbtn-block"
          data-mode={2}
          onClick={[Function]}
          type="button"
        >
          Заблокированные
        </button>
      </div>
    </MobileCompanyFilters>
    <MobileCompanyClietns
      clients={
        Array [
          Object {
            "balance": 200,
            "id": 0,
            "name": "Вася",
            "patronymic": "Дмитриевич",
            "surname": "Пупкин",
          },
          Object {
            "balance": 200,
            "id": 1,
            "name": "Ваня",
            "patronymic": "Александрович",
            "surname": "Веселюшкин",
          },
          Object {
            "balance": -200,
            "id": 2,
            "name": "Петя",
            "patronymic": "Андреевич",
            "surname": "Грустняшкин",
          },
          Object {
            "balance": 135,
            "id": "f088",
            "name": "Димка",
            "patronymic": "Владимирович",
            "surname": "Прыгунчик",
          },
        ]
      }
    >
      <div>
        <table
          className="table"
        >
          <thead>
            <tr>
              <th
                scope="col"
              >
                Фамилия
              </th>
              <th
                scope="col"
              >
                Имя
              </th>
              <th
                scope="col"
              >
                Отчество
              </th>
              <th
                scope="col"
              >
                Баланс
              </th>
              <th
                scope="col"
              >
                Статус
              </th>
              <th
                scope="col"
              >
                Редактировать
              </th>
              <th
                scope="col"
              >
                Удалить
              </th>
            </tr>
          </thead>
          <tbody>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 0,
                  "name": "Вася",
                  "patronymic": "Дмитриевич",
                  "surname": "Пупкин",
                }
              }
              key="0"
            >
              <tr>
                <td>
                  Пупкин
                </td>
                <td>
                  Вася
                </td>
                <td>
                  Дмитриевич
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": 200,
                  "id": 1,
                  "name": "Ваня",
                  "patronymic": "Александрович",
                  "surname": "Веселюшкин",
                }
              }
              key="1"
            >
              <tr>
                <td>
                  Веселюшкин
                </td>
                <td>
                  Ваня
                </td>
                <td>
                  Александрович
                </td>
                <td>
                  200
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": -200,
                  "id": 2,
                  "name": "Петя",
                  "patronymic": "Андреевич",
                  "surname": "Грустняшкин",
                }
              }
              key="2"
            >
              <tr>
                <td>
                  Грустняшкин
                </td>
                <td>
                  Петя
                </td>
                <td>
                  Андреевич
                </td>
                <td>
                  -200
                </td>
                <td>
                  <span>
                    Заблокированный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
            <Client
              data={
                Object {
                  "balance": 135,
                  "id": "f088",
                  "name": "Димка",
                  "patronymic": "Владимирович",
                  "surname": "Прыгунчик",
                }
              }
              key="f088"
            >
              <tr>
                <td>
                  Прыгунчик
                </td>
                <td>
                  Димка
                </td>
                <td>
                  Владимирович
                </td>
                <td>
                  135
                </td>
                <td>
                  <span>
                    Активный
                  </span>
                </td>
                <td>
                  <button
                    className="btn btn-secondary"
                    onClick={[Function]}
                    type="button"
                  >
                    Редактировать
                  </button>
                </td>
                <td>
                  <button
                    className="btn btn-secondary btn-delete"
                    onClick={[Function]}
                    type="button"
                  >
                    Удалить
                  </button>
                </td>
              </tr>
            </Client>
          </tbody>
        </table>
      </div>
    </MobileCompanyClietns>
    <button
      className="btn btn-secondary btn-add"
      onClick={[Function]}
      type="button"
    >
      Добавить Клиента
    </button>
  </div>
</MobileCompany>
`;
